force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/BMCServiceDesk__BMC_ComputerSystem__c.object-meta.xml
<CustomObject>
    <description>BMC_ComputerSystem. CMDB Class that stores configuration items (CIs) relating to collections of managed system elements. The managed system elements provide computing capabilities and serve as aggregation points to relate one or more of the following elements: file systems, operating systems, processors, and memory (volatile storage, nonvolatile, or storage).  T</description>
    <label>Computer System</label>
    <nameField>
        <label>BMC_ComputerSystem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Computer Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>