force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/fields/BMCServiceDesk__AdminPasswordStatus__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AdminPasswordStatus__c</fullName>
    <label>Admin Password Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Enabled</fullName>
            </value>
            <value>
                <fullName>Not Implemented</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>