force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/fields/BMCServiceDesk__BootROMSupported__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__BootROMSupported__c</fullName>
    <label>Boot ROM Supported</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>