force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/fields/BMCServiceDesk__CapabilityList__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CapabilityList__c</fullName>
    <label>Capability List</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>