force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/fields/BMCServiceDesk__ConfigurationOptions__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ConfigurationOptions__c</fullName>
    <label>Configuration Options</label>
    <length>254</length>
    <type>Text</type>
</CustomField>