force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/fields/BMCServiceDesk__DHCPUse__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DHCPUse__c</fullName>
    <label>DHCP Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Enabled</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>