force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/fields/BMCServiceDesk__ExpansionInterface__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ExpansionInterface__c</fullName>
    <label>Expansion Interface</label>
    <length>254</length>
    <type>Text</type>
</CustomField>