force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/fields/BMCServiceDesk__FirmwareVersion__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FirmwareVersion__c</fullName>
    <label>Firmware Version</label>
    <length>30</length>
    <type>Text</type>
</CustomField>