force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/fields/BMCServiceDesk__InputCurrent__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__InputCurrent__c</fullName>
    <label>Input Current</label>
    <length>30</length>
    <type>Text</type>
</CustomField>