force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/fields/BMCServiceDesk__MaxConsumption__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__MaxConsumption__c</fullName>
    <label>Maximum Consumption</label>
    <length>30</length>
    <type>Text</type>
</CustomField>