force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/fields/BMCServiceDesk__MediaSupported__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__MediaSupported__c</fullName>
    <label>Media Supported</label>
    <length>254</length>
    <type>Text</type>
</CustomField>