force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/fields/BMCServiceDesk__PrimaryCapability__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PrimaryCapability__c</fullName>
    <label>Primary Capability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Dedicated</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Router</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>Layer 3 Switch</fullName>
            </value>
            <value>
                <fullName>Central Office Switch</fullName>
            </value>
            <value>
                <fullName>Hub</fullName>
            </value>
            <value>
                <fullName>Access Server</fullName>
            </value>
            <value>
                <fullName>Firewall</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>I/O</fullName>
            </value>
            <value>
                <fullName>Web Caching</fullName>
            </value>
            <value>
                <fullName>Server</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Block Server</fullName>
            </value>
            <value>
                <fullName>File Server</fullName>
            </value>
            <value>
                <fullName>Mobile User Device</fullName>
            </value>
            <value>
                <fullName>Repeater</fullName>
            </value>
            <value>
                <fullName>Bridge/Extender</fullName>
            </value>
            <value>
                <fullName>Gateway</fullName>
            </value>
            <value>
                <fullName>LoadBalancer</fullName>
            </value>
            <value>
                <fullName>Mainframe</fullName>
            </value>
            <value>
                <fullName>SANSwitch</fullName>
            </value>
            <value>
                <fullName>SANHub</fullName>
            </value>
            <value>
                <fullName>SANBridge</fullName>
            </value>
            <value>
                <fullName>SANRouter</fullName>
            </value>
            <value>
                <fullName>SANDirectorRAIDStorageDevice</fullName>
            </value>
            <value>
                <fullName>Virtual Tape Library</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>