force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/fields/BMCServiceDesk__ResetCapability__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ResetCapability__c</fullName>
    <label>Reset Capability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Enabled</fullName>
            </value>
            <value>
                <fullName>Non-recoverable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>