force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/fields/BMCServiceDesk__ResetLimit__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ResetLimit__c</fullName>
    <label>Reset Limit</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>