force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/fields/BMCServiceDesk__SystemType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SystemType__c</fullName>
    <label>System Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>X86-based PC</fullName>
            </value>
            <value>
                <fullName>MIPS-based PC</fullName>
            </value>
            <value>
                <fullName>Alpha-based PC</fullName>
            </value>
            <value>
                <fullName>Power PCSH-x PC</fullName>
            </value>
            <value>
                <fullName>StrongARM PC</fullName>
            </value>
            <value>
                <fullName>64-bit Intel PC</fullName>
            </value>
            <value>
                <fullName>64-bit Alpha PC</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>X86-Nec98 PC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>