force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/fields/BMCServiceDesk__ThermalState__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ThermalState__c</fullName>
    <label>Thermal State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Safe</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Non-recoverable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>