force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/fields/BMCServiceDesk__TotalPhysicalMemory__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__TotalPhysicalMemory__c</fullName>
    <label>Total Physical Memory</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>