force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/fields/BMCServiceDesk__VirtualSystemType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__VirtualSystemType__c</fullName>
    <label>Virtual System Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>LPAR</fullName>
            </value>
            <value>
                <fullName>VM/VM Guest</fullName>
            </value>
            <value>
                <fullName>VMware</fullName>
            </value>
            <value>
                <fullName>Xen</fullName>
            </value>
            <value>
                <fullName>LDOM</fullName>
            </value>
            <value>
                <fullName>Solaris Container</fullName>
            </value>
            <value>
                <fullName>HP nPartitions</fullName>
            </value>
            <value>
                <fullName>VPar</fullName>
            </value>
            <value>
                <fullName>Microsoft Hyper-V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>