force-app/main/default/objects/BMCServiceDesk__BMC_ComputerSystem__c/fields/BMCServiceDesk__Workgroup__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Workgroup__c</fullName>
    <label>Workgroup</label>
    <length>254</length>
    <type>Text</type>
</CustomField>